--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "target": "esnext",
     "types": ["jest"],
     // For nodejs:
-    // "lib": ["esnext"],
+    "lib": ["es6", "dom"],
     // "types": ["node"],
     // and npm install -D @types/node
 
