--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "rollup -c rollup.config.js",
+    "dev": "rollup -c rollup.config.js -w"
   },
   "keywords": [],
   "author": "",
@@ -18,5 +20,10 @@
     "babel-jest": "^30.2.0",
     "jest": "^30.2.0",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "@rollup/plugin-typescript": "^12.3.0",
+    "rollup": "^4.53.5",
+    "tslib": "^2.8.1"
   }
 }
