--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "lib": ["es6", "dom"],
     // "types": ["node"],
     // and npm install -D @types/node
-
+    "moduleResolution": "node",
     // Other Outputs
     // "sourceMap": true,
     // "declaration": true,
